After CMF 1.5.3

  Bug Fixes

    - CMFTopic.DateCriteria: The behavior and naming of date criteria
      operators was very confusing and in many cases unexpected and 
      wrong. For that reason e.g. Plone replaced the implementation
      with a more user-friendly handling which is hereby introduced
      to CMF proper. (http://www.zope.org/Collectors/CMF/339)

    - CMFCore.PortalContent, CMFCore.FSSTXMethod, CMFTopic.Topic,
      CMFDefault.SkinnedFolder: Cache headers from the Caching Policy Manager
      never got set for DTML-based skins due to the way the view template
      __call__ method was invoked. (http://www.zope.org/Collectors/CMF/374)

    - CMFCore.FSImage and FSFile: Unlike the current behavior of Zope itself,
      FSImage and FSFile would set a content-length response header for 304
      (not modified) responses, which should not be done according to 
      RFC 2616. It won't do so anymore, but Zope itself will still force a
      content-length header in ZServer.HTTPResponse. This misbehavior
      has been filed as a Zope issue (http://www.zope.org/Collectors/Zope/1866).
      (http://www.zope.org/Collectors/CMF/372)

    - PortalFolder: Improved the _checkId method.
      Method Aliases mask objects with matching IDs. Thus _checkId() and
      checkIdAvailable() now make sure non-managers can't create objects with
      IDs already taken by Method Aliases of the current folder.

    - CMFDefault.Image and CMFDefault.File: When calling the constructor,
      any intelligent content type detection would be destroyed by the
      call to initialize Dublin Core values, which would overwrite the
      content_type. It is now preserved, if possible.
      (http://www.zope.org/Collectors/CMF/370)

  Features

    - CMFTopic.Topic: Made Topics a tad more useful by subclassing from
      CMFDefault.SkinnedFolder instead of CMFCore.PortalFolder, because
      SkinnedFolder is CatalogAware. Topics now offer useful information